--- a/styles/style.css
+++ b/styles/style.css
@@ -36,10 +36,7 @@ body {
 h1 {
     font-family: "Rubik Wet Paint", mono;
     font-size: 4em;
-    /*credit to geeksforgeeks to style text with linear gradient*/
-    background: linear-gradient(60deg, orange, yellow, green, cyan, blue, violet);
-    -webkit-text-fill-color: transparent;
-    -webkit-background-clip: text;
+
 }
 
 p {
@@ -67,8 +64,8 @@ button {
     width: 100vw;
     height: 80vh;
 
-    /* display: none; */
-    display: flex;
+    display: none;
+    /* display: flex; */
 
     flex-direction: column;
     justify-content: center;
@@ -84,6 +81,14 @@ button {
     align-items: center;
 }
 
+#logo-container>h1,
+#player-score {
+    /*credit to geeksforgeeks to style text with linear gradient*/
+    background: linear-gradient(60deg, orange, yellow, green, cyan, blue, violet);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+}
+
 #logo-container>img {
     width: 14vw;
     height: 24vh;
@@ -96,12 +101,13 @@ button {
     color: red;
 }
 
-#start-btn {
+#start-btn,
+#restart-btn {
     transition-duration: 0.4s;
     background: transparent;
 }
 
-button:hover {
+#start-btn:hover {
     color: red;
     font-size: 2em;
 }
@@ -119,9 +125,31 @@ button:hover {
 
 /*IDs*/
 #game-over-menu {
-    display: none;
-    /* display: flex; */
+    width: 100vw;
+    height: 80vh;
+
+    /* display: none; */
+    display: flex;
 
     flex-direction: column;
-    align-content: center;
+    justify-content: center;
+    align-items: center;
+
+    background: transparent;
+}
+
+#game-over-text {
+    color: red;
+    font-size: 8em;
+    text-shadow: 2px 4px 4px rgba(135, 34, 194, 0.815);
+}
+
+#restart-btn:hover {
+    width: 20vw;
+    color: red;
+    font-size: 2em;
+}
+
+#player-score {
+    font-size: 6em;
 }
